[package]
name = "makepress-lib"
version = "3.0.0"
edition = "2018"
publish = ["makepress"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
futures = "0.3.21"
pin-project-lite = "0.2.9"
serde = {version = "1.0.137", features = ["derive"]}
thiserror = "1.0.30"
warp = "0.3.2"
uuid = {version = "1.1.1", features = ["serde", "v4"]}