[package]
name = "makepress-lib"
version = "3.0.0"
edition = "2018"
publish = ["makepress"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
futures = "0.3.25"
pin-project-lite = "0.2.9"
serde = {version = "1.0.151", features = ["derive"]}
thiserror = "1.0.37"
warp = "0.3.3"
uuid = {version = "1.2.2", features = ["serde", "v4"]}